feat: Complete quiz functionality and styling
- Add full JavaScript quiz logic
- Add questions database with AP2 topics
- Complete result modal styling
- Fix HTML structure
- Add footer and responsive improvements

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 <body>
     <nav class="navbar">
         <div class="logo">🎯 AP2-Lernportal</div>
-        <div class="nav-links">
-            <a href="#themen" class="nav-link">Themen</a>
-            <a href="#pruefung" class="nav-link">Prüfung</a>
-            <a href="#fortschritt" class="nav-link">Fortschritt</a>
-        </div>
     </nav>
 
     <header class="hero">
@@ -21,7 +16,7 @@
         <p class="subtitle">AP2 Vorbereitung & Prüfungssimulation</p>
         <div class="hero-stats">
             <div class="stat">
-                <span class="stat-number">8</span>
+                <span class="stat-number">6</span>
                 <span class="stat-label">Prüfungsbereiche</span>
             </div>
             <div class="stat">
@@ -44,12 +39,11 @@
                     <div class="subject-icon">📋</div>
                     <h3>Projektmanagement</h3>
                     <ul>
-                        <li>Wasserfall-, V-, Spiralmodell</li>
-                        <li>Agile, Scrum, Kanban</li>
+                        <li>Phasenmodelle (Wasserfall, V-Modell, Agile)</li>
                         <li>Projektstrukturplan (PSP)</li>
-                        <li>Gantt-Diagramme, Netzplantechnik</li>
+                        <li>Gantt-Diagramme</li>
                         <li>Risikoanalyse (FMEA)</li>
-                        <li>Ressourcenplanung</li>
+                        <li>Amortisationsrechnung</li>
                     </ul>
                     <span class="percentage">~30%</span>
                 </div>
@@ -60,10 +54,9 @@
                     <ul>
                         <li>OSI- und TCP/IP-Modell</li>
                         <li>IPv4/IPv6, Subnetting</li>
-                        <li>VLANs, Routing (statisch/OSPF)</li>
-                        <li>Switching, Spanning Tree</li>
+                        <li>VLANs, Routing</li>
                         <li>VPN (IPSec, SSL)</li>
-                        <li>Network Access Control (NAC)</li>
+                        <li>Network Security</li>
                     </ul>
                     <span class="percentage">~20%</span>
                 </div>
@@ -72,12 +65,11 @@
                     <div class="subject-icon">🖥️</div>
                     <h3>Systemadministration</h3>
                     <ul>
-                        <li>Windows Server, Active Directory</li>
-                        <li>Linux (Debian/RHEL), Bash</li>
-                        <li>Virtualisierung (KVM, VMware)</li>
-                        <li>Container (Docker, Kubernetes)</li>
-                        <li>Automatisierung (Ansible)</li>
-                        <li>Monitoring (Nagios, Grafana)</li>
+                        <li>Windows Server / AD</li>
+                        <li>Linux Administration</li>
+                        <li>Virtualisierung</li>
+                        <li>Container (Docker/K8s)</li>
+                        <li>Monitoring</li>
                     </ul>
                     <span class="percentage">~20%</span>
                 </div>
@@ -87,11 +79,10 @@
                     <h3>IT-Sicherheit</h3>
                     <ul>
                         <li>DSGVO, BDSG</li>
-                        <li>ISO 27001, BSI-Grundschutz</li>
-                        <li>RBAC, ACL, Least Privilege</li>
-                        <li>Firewalls, IDS/IPS</li>
-                        <li>Verschlüsselung (AES, RSA)</li>
-                        <li>Backup-Strategien (3-2-1)</li>
+                        <li>ISO 27001, BSI</li>
+                        <li>RBAC, ACL</li>
+                        <li>Verschlüsselung</li>
+                        <li>Backup-Strategien</li>
                     </ul>
                     <span class="percentage">~15%</span>
                 </div>
@@ -100,12 +91,11 @@
                     <div class="subject-icon">📊</div>
                     <h3>Wirtschaft & Soziales</h3>
                     <ul>
-                        <li>Arbeitsrecht (BUrlG, KSchG)</li>
+                        <li>Arbeitsrecht</li>
                         <li>Sozialversicherungen</li>
-                        <li>Betriebsrat, Mitbestimmung</li>
-                        <li>Tarifverträge, Lohnarten</li>
+                        <li>Betriebsrat</li>
+                        <li>Tarifverträge</li>
                         <li>Unternehmensformen</li>
-                        <li>Amortisation, ROI</li>
                     </ul>
                     <span class="percentage">~10%</span>
                 </div>
@@ -115,11 +105,10 @@
                     <h3>Dokumentation</h3>
                     <ul>
                         <li>Technische Dokumentation</li>
-                        <li>Handbücher (System, User)</li>
-                        <li>Dokumentationsstandards</li>
-                        <li>Präsentationstechnik</li>
                         <li>ITIL Framework</li>
-                        <li>CMDB, Ticket-Systeme</li>
+                        <li>Handbücher</li>
+                        <li>Präsentation</li>
+                        <li>CMDB</li>
                     </ul>
                     <span class="percentage">~5%</span>
                 </div>
@@ -129,6 +118,7 @@
         <!-- Prüfungssimulation -->
         <section id="pruefung" class="section pruefung-section">
             <h2>🎓 Prüfungssimulation</h2>
+            <p class="section-desc">Teste dein Wissen unter Prüfungsbedingungen</p>
             <div class="exam-modes">
                 <button class="exam-btn" onclick="startExam('kurz')">
                     <span class="exam-title">⚡ Kurzprüfung</span>
@@ -144,31 +134,49 @@
                 </button>
             </div>
         </section>
+    </main>
 
-        <!-- Quiz Interface -->
-        <div id="quiz-modal" class="modal hidden">
-            <div class="quiz-container">
-                <div class="quiz-header">
-                    <span id="question-counter">Frage 1/10</span>
-                    <span id="quiz-timer" class="timer">15:00</span>
-                    <button class="close-btn" onclick="closeQuiz()">×</button>
-                </div>
-                <div class="progress-bar">
-                    <div id="progress-fill" class="progress-fill"></div>
-                </div>
-                <div id="question-container" class="question-container">
-                    <!-- Fragen werden hier dynamisch geladen -->
-                </div>
-                <div id="quiz-controls" class="quiz-controls">
-                    <button id="next-btn" class="btn btn-primary" onclick="nextQuestion()" disabled>Weiter</button>
-                </div>
+    <!-- Quiz Modal -->
+    <div id="quiz-modal" class="modal hidden">
+        <div class="quiz-container">
+            <div class="quiz-header">
+                <span id="question-counter" class="question-counter">Frage 1/10</span>
+                <span id="quiz-timer" class="timer">15:00</span>
+                <button class="close-btn" onclick="closeQuiz()">×</button>
+            </div>
+            <div class="progress-bar">
+                <div id="progress-fill" class="progress-fill"></div>
+            </div>
+            <div id="question-container" class="question-container">
+                <!-- Fragen werden hier dynamisch geladen -->
+            </div>
+            <div class="quiz-controls">
+                <button id="next-btn" class="btn btn-primary" onclick="nextQuestion()" disabled>Weiter</button>
             </div>
         </div>
+    </div>
 
-        <!-- Ergebnis Modal -->
-        <div id="result-modal" class="modal hidden">
-            <div class="result-container">
-                <h2 id="result-title">Prüfung beendet!</h2>
-                <div class="result-score">
-                    <span id="result-percent">0%</span>
-                    <span id="result
+    <!-- Ergebnis Modal -->
+    <div id="result-modal" class="modal hidden">
+        <div class="result-container">
+            <h2 id="result-title">Prüfung beendet!</h2>
+            <div class="result-score">
+                <span id="result-percent" class="result-percent">0%</span>
+                <span id="result-status" class="result-status">Bestanden</span>
+            </div>
+            <div class="result-progress">
+                <div id="result-bar" class="result-bar"></div>
+            </div>
+            <div id="result-details" class="result-details">
+                <!-- Details werden dynamisch eingefügt -->
+            </div>
+            <div class="result-actions">
+                <button class="btn btn-secondary" onclick="closeResult()">Schließen</button>
+                <button class="btn btn-primary" onclick="location.reload()">Neue Prüfung</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>AP2 Lernportal für Fachinformatiker Systemintegration</p>
+        <p style="margin-top: 0.5rem; opacity: 0.7
