fix: Add missing script tags and footer close - questions.js and script.js were not loaded

--- a/index.html
+++ b/index.html
@@ -179,4 +179,10 @@
 
     <footer>
         <p>AP2 Lernportal für Fachinformatiker Systemintegration</p>
-        <p style="margin-top: 0.5rem; opacity: 0.7
+        <p style="margin-top: 0.5rem; opacity: 0.7">Made with ❤️ for AP2-Vorbereitung</p>
+    </footer>
+
+    <script src="questions.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
